# mlops_cicd_training

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
src/app/: __init__.py  sample.py
tests/: test_clamp.py  test_safe_divide.py  test_sample.py  test_sample_extra.py
